--- a/bimber/pubspec.yaml
+++ b/bimber/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   bloc: ^5.0.1
   flutter_bloc: ^5.0.1
+  equatable: ^1.2.1
 
 dev_dependencies:
   flutter_test:
