--- a/bimber/pubspec.yaml
+++ b/bimber/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   bloc: ^5.0.1
   flutter_bloc: ^5.0.1
   equatable: ^1.2.1
+  flare_flutter: ^2.0.5
 
 dev_dependencies:
   flutter_test:
@@ -41,6 +42,14 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  assets:
+    - assets/
+  fonts:
+  - family: Baloo
+    fonts:
+    - asset: fonts/Baloo2-ExtraBold.ttf
+      weight: 900
+
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
