--- a/bimber/pubspec.yaml
+++ b/bimber/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_bloc: ^5.0.1
   equatable: ^1.2.1
   flare_flutter: ^2.0.5
+  page_transition: "^1.1.5"
 
 dev_dependencies:
   flutter_test:
