--- a/bimber/pubspec.yaml
+++ b/bimber/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   tinycolor: ^1.0.2
   meta: ^1.1.8
   build_context: ^2.0.2
+  flutter_form_builder: ^3.12.0
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
