--- a/bimber/pubspec.yaml
+++ b/bimber/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   build_context: ^2.0.2
   flutter_form_builder: ^3.12.0
   intl: ^0.16.1
+  provider: ^4.3.2
 
 dev_dependencies:
   flutter_test:
