--- a/bimber/pubspec.yaml
+++ b/bimber/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_form_builder: ^3.12.0
   intl: ^0.16.1
   provider: ^4.3.2
+  sprung: ^2.0.0+12
 
 dev_dependencies:
   flutter_test:
