--- a/bimber/pubspec.yaml
+++ b/bimber/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   intl: ^0.16.1
   provider: ^4.3.2
   sprung: ^2.0.0+12
+  cached_network_image: ^2.2.0+1
 
 dev_dependencies:
   flutter_test:
