--- a/bimber/pubspec.yaml
+++ b/bimber/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_form_builder: ^3.12.0
   intl: ^0.16.1
   geolocator: ^5.3.2+2
+  cached_network_image: ^2.2.0+1
 
 dev_dependencies:
   flutter_test:
