--- a/bimber/pubspec.yaml
+++ b/bimber/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   cached_network_image: ^2.2.0+1
   provider: ^4.3.2
   sprung: ^2.0.0+12
+  flutter_chips_input: ^1.9.0-dev.1
 
 dev_dependencies:
   flutter_test:
