--- a/bimber/pubspec.yaml
+++ b/bimber/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   flutter_chips_input: ^1.9.4
   flutter_cache_manager: ^1.4.2
   shared_preferences: ^0.5.12
+  graphql_flutter: ^4.0.0-beta.1
+  dio: ^3.0.10
 
 dev_dependencies:
   flutter_test:
