--- a/bimber/pubspec.yaml
+++ b/bimber/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   shared_preferences: ^0.5.12
   graphql_flutter: ^4.0.0-beta.1
   dio: ^3.0.10
+  flutter_dotenv: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -40,6 +41,7 @@ dev_dependencies:
 flutter:
   assets:
     - assets/
+    - assets/env/.env_dev
   fonts:
   - family: Baloo
     fonts:
