--- a/bimber/pubspec.yaml
+++ b/bimber/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   sprung: ^2.0.0+12
   flutter_chips_input: ^1.9.0-dev.1
   shared_preferences: ^0.5.12
+  dotted_border: ^1.0.6
 
 dev_dependencies:
   flutter_test:
