--- a/bimber/assets/env/.env_dev
+++ b/bimber/assets/env/.env_dev
@@ -1,2 +1,3 @@
 GRAPHQL_URL=http://192.168.0.100:4001/graphql
+GRAPHQL_WS_URL=ws://192.168.0.100:4001/graphql
 IMAGE_SERVER_PREFIX=http://192.168.0.100:8080/images/
