--- a/bimber/pubspec.yaml
+++ b/bimber/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_dotenv: ^2.1.0
   google_maps_flutter: ^1.0.6
   google_maps_cluster_manager: ^0.2.0
+  charts_flutter: ^0.9.0
 
 dev_dependencies:
   flutter_test:
