--- a/bimber/android/app/src/main/AndroidManifest.xml
+++ b/bimber/android/app/src/main/AndroidManifest.xml
@@ -10,8 +10,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="bimber"
-        android:icon="@mipmap/ic_launcher">
+        android:label="Bimber"
+        android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
