--- a/bimber/pubspec.yaml
+++ b/bimber/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_native_splash: ^0.1.9
+  flutter_launcher_icons: ^0.7.4
 
 flutter:
   assets:
@@ -56,6 +58,15 @@ flutter:
 
 
   uses-material-design: true
+
+flutter_native_splash:
+  image: assets/bimber_splash.png
+  color: "000000"
+
+flutter_icons:
+  android: "launcher_icon" 
+  ios: true
+  image_path: "assets/logo_icon.png"
 
 dependency_overrides:
   flutter_chips_input: ^1.9.0-dev.1
